--- a/1724767028547.md
+++ b/1724767028547.md
@@ -1,14 +1,25 @@
 # Emby中 SP特典/短片/花絮 刮削命名
-> src: [EMBY剧场动画显示多个SP文件怎么办？](https://bbs.acgrip.com/thread-7127-1-1.html)
 
-建文件夹：
-* Extras：扩展内容
-* Specials：SP 特典
-* Shorts：短片
-* Scenses：片段
-* Featurettes：幕后花絮
-* Deleted Scenses：被删除的片段
-* Interviews：新闻采访
-* Trailers：预告片
+## 🌟[Movie extras](https://emby.media/support/articles/Movie-Naming.html#movie-extras)
 
-> 建一个叫Trailers的文件夹，把这些文件拖进去，每个文件名后面加一个“ - trailer”这样就不会既不会在正片里显示，也不会在额外里显示，点击预告片就可以看。
+Special features for movies can be stored as video files in an extras folder under movie folders. Nested folders are not supported.
+额外内容可以在电影文件夹下的“extras”文件夹中以视频文件的形式存储。不支持嵌套文件夹。
+
+In addition to extras, several other sub-folder names are supported:
+除了extras之外，还支持以下几个子文件夹名称：
+
+* extras
+* specials
+* shorts
+* scenes
+* featurettes
+* behind the scenes
+* deleted scenes
+* interviews
+* trailers
+
+Theme Songs & Videos: 'theme-music' sub-folder
+
+Theme Videos: 'backdrops' sub-folder
+
+Trailers: -trailer suffix or 'trailers' sub-folder
