--- a/1724767028547.md
+++ b/1724767028547.md
@@ -1,25 +1,28 @@
 # Emby中 SP特典/短片/花絮 刮削命名
 
-## 🌟[Movie extras](https://emby.media/support/articles/Movie-Naming.html#movie-extras)
+### 🌟 [Movie extras](https://emby.media/support/articles/Movie-Naming.html#movie-extras)
 
 Special features for movies can be stored as video files in an extras folder under movie folders. Nested folders are not supported.
+
 额外内容可以在电影文件夹下的“extras”文件夹中以视频文件的形式存储。不支持嵌套文件夹。
 
 In addition to extras, several other sub-folder names are supported:
+
+
 除了extras之外，还支持以下几个子文件夹名称：
 
-* extras
-* specials
-* shorts
-* scenes
-* featurettes
-* behind the scenes
-* deleted scenes
-* interviews
-* trailers
+  * extras
+  * specials
+  * shorts
+  * scenes
+  * featurettes
+  * behind the scenes
+  * deleted scenes
+  * interviews
+  * trailers
 
 Theme Songs & Videos: 'theme-music' sub-folder
 
 Theme Videos: 'backdrops' sub-folder
 
-Trailers: -trailer suffix or 'trailers' sub-folder
+Trailers: '-trailer' suffix or 'trailers' sub-folder
