--- a/1724767028547.md
+++ b/1724767028547.md
@@ -11,15 +11,24 @@ In addition to extras, several other sub-folder names are supported:
 
 除了extras之外，还支持以下几个子文件夹名称：
 
-  * extras
-  * specials
-  * shorts
-  * scenes
-  * featurettes
-  * behind the scenes
-  * deleted scenes
-  * interviews
-  * trailers
+* extras: 额外内容 / 花絮
+  * 这个是最常见的翻译，涵盖了电影的各种附加内容。
+* specials: 特辑 / 特别收录
+  * 通常指制作精良的专题节目，如制作花絮、幕后故事等。
+* shorts: 短片 / 短片集
+  * 指一些较短的影片，如动画短片、幕后花絮短片等。
+* scenes: 片段 / 场景集
+  * 指电影中的片段，如删减片段、扩展片段等。
+* featurettes: 特色短片 / 专题短片
+  * 与specials类似，但通常更聚焦于某个特定主题。
+* behind the scenes: 幕后花絮 / 制作花絮
+  * 指电影拍摄过程中的幕后花絮。
+* deleted scenes: 删减片段
+  * 指在最终上映版本中被剪掉的片段。
+* interviews: 访谈 / 采访
+  * 指对演员、导演等工作人员的访谈。
+* trailers: 预告片
+  * 指电影上映前的宣传片。
 
 Theme Songs & Videos: 'theme-music' sub-folder
 
